--- a/Mybatis_design/pom.xml
+++ b/Mybatis_design/pom.xml
@@ -17,11 +17,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
-        <dependency>
+             
+<!--         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
-        </dependency>
+        </dependency> -->
+             
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
